@@ -186,9 +186,10 @@
                         </dependency>
                     </dependencies>
                     <configuration>
-                        <forkMode>never</forkMode>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
                         <argLine>
-                            -javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.itReportPath}
+                            -javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.itReportPath} -Xmx1024m -XX:MaxPermSize=256m
                         </argLine>
                         <includes>
                             <include>**/*.class</include>
